      nobody, no matter the umask of root.
    - Drop the intro note, and show the explanation as part of the
      participate question. (Closes: #229573)
    - Update Norwegian Bokmål debconf translation.
    - Lower the priority from high to low for the question
      asking if it is ok to edit MAILTO address. (Closes: #229288, #229111)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 25 Jan 2004 09:44:44 +0100

popularity-contest (1.9) unstable; urgency=low

  * Petter Reinholdtsen
    - Report error in popcon-largest-unused if
      /var/log/popularity-contest is missing.
    - Make sure db_input do not fail if the question already was
      displayed earlier.  (Closes: #229091, #229092, #229112)

 -- Petter Reinholdtsen <pere@debian.org>  Fri, 23 Jan 2004 09:40:57 +0100

popularity-contest (1.8) unstable; urgency=low

  * Petter Reinholdtsen
    - Add Dutch debconf template translation (nl.po).  File from
      Bart Cornelis. (Closes: #217038)
    - Add URLs to the project home page in manual page and README file.
    - Make it possible to reconfigure this package by calling
      'dpkg-reconfigure popularity-contest', to get the code in
      base-config working as it should. (Closes: #228535).
      This should still fix bug #135273, as the current PARTICIPATE
      value is taken from the current config file, and only that
      variable is modified if the user using debconf change the value.
    - Collect and report the content of /etc/debian_version.
    - Start using generic address survey@popcon.debian.org. (Closes: #206830)
    - Ask if the submit address should be changed on upgrades and
      reconfigures.  This should activate the new address on old
      installations.
    - Updated all translation files with the new question text.
    - Started on Norwegian Bokmål debconf translation (no.po).
  * Bill Allombert
    - control: change exim to exim4. (Closes: #228575)
    - Update documentation to refer to popcon.debian.org.
